--- a/Twitterr/Base.lproj/Main.storyboard
+++ b/Twitterr/Base.lproj/Main.storyboard
@@ -210,7 +210,7 @@
                                                 <constraint firstAttribute="bottomMargin" relation="lessThanOrEqual" secondItem="1uC-Qj-mRy" secondAttribute="bottom" constant="100" id="YqO-LA-hwg"/>
                                                 <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="DW9-pe-uHC" secondAttribute="bottom" constant="2" id="Zh6-Ng-aJt"/>
                                                 <constraint firstItem="bdk-eA-D54" firstAttribute="top" relation="greaterThanOrEqual" secondItem="6lD-Pg-AXo" secondAttribute="bottom" constant="11" id="amY-P8-pNn"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="DW9-pe-uHC" secondAttribute="trailing" constant="16.5" id="cNb-xb-Y6M"/>
+                                                <constraint firstAttribute="trailingMargin" relation="lessThanOrEqual" secondItem="DW9-pe-uHC" secondAttribute="trailing" constant="16.5" id="cNb-xb-Y6M"/>
                                                 <constraint firstItem="Ne2-x0-dS4" firstAttribute="baseline" secondItem="bdk-eA-D54" secondAttribute="baseline" id="cVg-gL-tqK"/>
                                                 <constraint firstItem="Ne2-x0-dS4" firstAttribute="leading" secondItem="1uC-Qj-mRy" secondAttribute="trailing" constant="4" id="dmy-JH-8o4"/>
                                                 <constraint firstItem="Ne2-x0-dS4" firstAttribute="top" secondItem="1uC-Qj-mRy" secondAttribute="top" id="eVm-y7-yVp"/>
